# rocket_league_map_loader

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: app.rs  dialog.rs  main.rs  manage_maps.rs  maps.rs  pref.rs
