[package]
name = "rocket_league_map_loader"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dark-light = "1.1.1"
egui = "0.18.1"
egui_extras = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
image = "0.25.2"
preferences = "2.0.0"
rfd = "0.14.1"
serde_json = "1.0"
zip = "2.2.0"

[build-dependencies]
winres = "0.1"